--- a/app/modules/largescreen/largescreen.html
+++ b/app/modules/largescreen/largescreen.html
@@ -15,9 +15,12 @@
               <img src="/cardHeader.png" width="100%" />
                 <div class="large-directory-card-main">
                   <ul class="large-directory-column" ng-repeat="column in page.columns track by $index">
-                    <li ng-repeat="item in column track by $index">
+                    <li ng-repeat="item in column track by $index" ng-class="{highlighted: (directory.selectedFloor == item.level)}">
                       <h2 ng-if="item.category">{{item.name}}</h2>
-                      <p ng-if="!item.category" ng-click="handleItemClick(item)">{{item.name}}</p>
+                      <p ng-if="!item.category" ng-click="handleItemClick(item)" class="store-listing">
+                        <span class="name">{{item.name}}</span>
+                        <span class="floor-name">{{item.level}}</span>
+                      </p>
                     </li>
                   </ul>
                 </div>
