--- a/app/modules/largescreen-sidebar/largescreen-sidebar.html
+++ b/app/modules/largescreen-sidebar/largescreen-sidebar.html
@@ -1,3 +1,7 @@
+<fa-modifier fa-translate="[274,0,0]">
+	<fa-surface class="sidebar-overlay"></fa-surface>
+</fa-modifier>
+
 <fa-modifier fa-size="sidebar.size" fa-translate="sidebar.position">
   <fa-render-node fa-node="sidebar.scrollview"></fa-render-node>
 </fa-modifier>
