--- a/app/public/index.html
+++ b/app/public/index.html
@@ -19,6 +19,7 @@
     <script src="/components/famous/dist/famous-global.js"></script>
     <script src="/components/famous-angular/dist/famous-angular.js"></script>
     <script src="/components/jibestream-sdk/JMapCore.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   </head>
   <body>
     <fa-app fa-perspective="250">
