added weather service, centre service, and largescreen weather module

--- a/app/modules/largescreen/largescreen.html
+++ b/app/modules/largescreen/largescreen.html
@@ -38,6 +38,7 @@
 
   </fa-header-footer-layout>
 
-
-  <largescreen-sidebar></largescreen-sidebar>
 </fa-view>
+
+<largescreen-sidebar></largescreen-sidebar>
+<largescreen-weather></largescreen-weather>
