--- a/app/modules/largescreen-sidebar/largescreen-sidebar.html
+++ b/app/modules/largescreen-sidebar/largescreen-sidebar.html
@@ -1,7 +1,54 @@
-<fa-modifier fa-translate="[274,0,0]">
-	<fa-surface class="sidebar-overlay"></fa-surface>
+<fa-modifier fa-translate="sidebar.overlay.postion">
+	<fa-surface class="sidebar-overlay">
+	</fa-surface>
 </fa-modifier>
 
-<fa-modifier fa-size="sidebar.size" fa-translate="sidebar.position">
-  <fa-render-node fa-node="sidebar.scrollview"></fa-render-node>
+<fa-modifier 
+	fa-size="sidebar.size" 
+	fa-translate="sidebar.translate">
+	<fa-scroll-view id="largeSidebarScrollView"
+		fa-options="sidebar.scrollview.options">
+
+		<!-- Menu Content -->
+		<fa-view fa-index="0">
+			<fa-modifier 
+				fa-size="sidebar.menuBg.size" 
+				fa-translate="sidebar.menuBg.translate">
+				<fa-surface class="sidebar-menu-bg">
+				</fa-surface>
+				<fa-modifier 
+					fa-align="sidebar.menuContent.align"
+					fa-origin="sidebar.menuContent.origin"
+					fa-size="sidebar.menuContent.size">
+					<fa-surface class="sidebar-menu-content">
+						<em>Select a category</em>
+						<ul class="sidebar-category-list">
+							<li ng-repeat="category in sidebar.categories" 
+								data-code="{{category.code}}">{{category.name}}</li>
+						</ul>
+						<em>Select a floor</em>
+						<ul class="sidebar-floor-list">
+							<li ng-repeat="floor in sidebar.floors" 
+								data-level="{{floor.level}}">Floor {{floor.level}}</li>
+						</ul>
+					</fa-surface>
+				</fa-modifier>
+			</fa-modifier>
+		</fa-view>
+
+		<!-- Menu Button -->
+		<fa-view fa-index="1">
+			<fa-modifier
+				fa-align="sidebar.menuBtn.align"
+				fa-origin="sidebar.menuBtn.origin",
+				fa-size="sidebar.menuBtn.size"
+				fa-rotate-z="sidebar.menuBtn.rotateZ">
+				<fa-surface class="sidebar-menu-btn">
+					<div class="caret" ng-class="{up:!sidebar.active}"></div>
+					<p>menu</p>
+				</fa-surface>
+			</fa-modifier>
+		</fa-view>
+
+	</fa-scroll-view>
 </fa-modifier>
