add viewport tag for testing with an iPad

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -19,7 +19,9 @@
     <script src="/components/famous/dist/famous-global.js"></script>
     <script src="/components/famous-angular/dist/famous-angular.js"></script>
     <script src="/components/jibestream-sdk/JMapCore.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <!-- <meta name="viewport" content="width=1080, initial-scale=0.71111, maximum-scale=0.71111"> -->
+    <meta name="viewport" content="width=1920, initial-scale=0.71111, maximum-scale=0.71111">
   </head>
   <body>
     <fa-app fa-perspective="250">
