--- a/app/public/index.html
+++ b/app/public/index.html
@@ -27,17 +27,20 @@ window.NREUM||(NREUM={}),__nr_require=function(t,e,n){function r(n){if(!e[n]){va
 ;NREUM.info={beacon:"bam.nr-data.net",errorBeacon:"bam.nr-data.net",licenseKey:"4853f3fcc8",applicationID:"5976126",sa:1,agent:"js-agent.newrelic.com/nr-476.min.js"}
     </script>
   </head>
-  <body>
+  <body ng-controller="KioskMasterCtrl">
     <fa-app fa-perspective="250">
-      <fa-view>
-        <fa-surface ng-if="mapReady" ng-show="mapShow">
-          <jmap></jmap>
-        </fa-surface>
-      </fa-view>
-      </fa-modifer>
-      <div ui-view></div>
-      <kioskmenu></kioskmenu>
-      <card-stream></card-stream>
+      <fa-modifier fa-translate="masterPosition.get()" fa-opacity="masterOpacity.get()">
+        <fa-view>
+          <fa-surface ng-if="mapReady" ng-show="mapShow">
+            <jmap></jmap>
+          </fa-surface>
+        </fa-view>
+        </fa-modifer>
+        <div ui-view></div>
+        <kioskmenu></kioskmenu>
+        <card-stream></card-stream>
+      </fa-modifier>
+      <kiosk-screensaver></kiosk-screensaver>
     </fa-app>
   </body>
   <script src="/assets/app.js"></script>
