imported westfield icon font

--- a/app/modules/largescreen/largescreen.html
+++ b/app/modules/largescreen/largescreen.html
@@ -135,10 +135,10 @@
               <fa-modifier
                 fa-size="menu.searchIcon.size" 
                 fa-translate="menu.searchIcon.translate">
-                <fa-image-surface 
+                <fa-surface 
                   fa-click="selectSearch()"
-                  fa-image-url="search-icon.png"
                   class="large-menu-search-icon">
+                  <div class="wf-wire-search"></div>
                 </fa-image-surface>
               </fa-modifier>
 
