--- a/app/public/wf-icons/icons-reference.html
+++ b/app/public/wf-icons/icons-reference.html
@@ -429,6 +429,10 @@ h2{font-size:18px;padding:0 0 21px 5px;margin:45px 0 0 0;text-transform:uppercas
           <div class="icon wf-holiday-hours"></div>
           <input type="text" readonly="readonly" value="holiday-hours">
         </li>
+        <li>
+          <div class="icon wf-arrow-left"></div>
+          <input type="text" readonly="readonly" value="arrow-left">
+        </li>
       </ul>
       <h2>Character mapping</h2>
       <ul class="glyphs character-mapping">
@@ -815,6 +819,10 @@ h2{font-size:18px;padding:0 0 21px 5px;margin:45px 0 0 0;text-transform:uppercas
         <li>
           <div data-icon="&#xe001;" class="icon"></div>
           <input type="text" readonly="readonly" value="&amp;#xe001;">
+        </li>
+        <li>
+          <div data-icon="&#xe002;" class="icon"></div>
+          <input type="text" readonly="readonly" value="&amp;#xe002;">
         </li>
       </ul>
     </div><script type="text/javascript">
