--- a/app/modules/search/search.html
+++ b/app/modules/search/search.html
@@ -16,6 +16,17 @@
         </fa-surface>
       </fa-modifier>
 
+      <!-- Search -->
+      <fa-modifier
+        ng-if="isLargescreen"
+        fa-size="search.options.searchIcon.size" 
+        fa-translate="search.options.searchIcon.translate">
+        <fa-surface 
+          class="large-menu-search-icon">
+          <div class="wf-wire-search"></div>
+        </fa-surface>
+      </fa-modifier>
+
       <!-- Text -->
       <fa-modifier 
         fa-size="search.options.query.text.size" 
@@ -23,11 +34,11 @@
         <fa-surface class="search-query-text"
           ng-class="{largescreen:isLargescreen}">
           <h1 class="searchBox" 
-            ng-show="!isLargescreen"
+            ng-if="!isLargescreen"
             ng-bind="string + '|'" 
             style="color: #fff"></h1>
           <h1 class="searchBox" 
-            ng-show="isLargescreen"
+            ng-if="isLargescreen"
             ng-bind="string" 
             style="color: #000"></h1>
         </fa-surface>
@@ -38,7 +49,7 @@
         fa-size="search.options.query.text.size" 
         fa-translate="search.options.query.text.translate">
         <fa-surface class="search-query-placeholder">
-          <h2 ng-show="isLargescreen && string.length == 0">{{search.options.query.placeholder.text}}</h2>
+          <h2 ng-if="isLargescreen && string.length == 0">{{search.options.query.placeholder.text}}</h2>
         </fa-surface>
       </fa-modifier>
 
@@ -88,7 +99,8 @@
           fa-align="search.options.keyboard.align" 
           fa-origin="search.options.keyboard.origin" 
           fa-size="search.options.keyboard.size" 
-          fa-translate="search.options.keyboard.translate">
+          fa-opacity="search.options.keyboard.opacity.get()"
+          fa-translate="search.options.keyboard.translate.get()">
           <fa-surface class="search-keyboard"
             ng-class="{largescreen:window.isLargescreen}"
             fa-background-color="search.options.keyboard.bgColor">
