--- a/app/modules/kiosk-screensaver/screensaver.html
+++ b/app/modules/kiosk-screensaver/screensaver.html
@@ -1,5 +1,11 @@
 <fa-modifier fa-translate="saverPosition.get()" fa-opacity="saverOpacity.get()">
   <fa-view>
-    <fa-image-surface fa-image-url="/screensaver/Guess_5.jpg" fa-touchstart="exitScreenSaver()"></fa-image-surface>
+    <fa-image-surface fa-image-url="/screensaver/Guess_5.jpg"></fa-image-surface>
+    <fa-modifier fa-size="[400, 100]" fa-align="[0.5, 0.5]" fa-origin="[0.5, 0.5]">
+      <fa-surface fa-background-color="'rgba(0,0,0,0.5)'">
+        <h1>Touch To Begin</h1>
+      </fa-surface>
+      <fa-surface fa-touchstart="exitScreenSaver()"></fa-surface>
+    </fa-modifier>
   </fa-view>
 </fa-modifier>
