screensaver start/stop logic

--- a/app/modules/kiosk-screensaver/screensaver.html
+++ b/app/modules/kiosk-screensaver/screensaver.html
@@ -5,7 +5,7 @@
       <fa-surface fa-background-color="'rgba(0,0,0,0.5)'">
         <h1>Touch To Begin</h1>
       </fa-surface>
-      <fa-surface fa-touchstart="exitScreenSaver()"></fa-surface>
+      <fa-surface fa-touchstart="KioskScreenSaver.exit()"></fa-surface>
     </fa-modifier>
   </fa-view>
 </fa-modifier>
