--- a/app/modules/kiosk-screensaver/screensaver.html
+++ b/app/modules/kiosk-screensaver/screensaver.html
@@ -1,11 +1,14 @@
-<fa-modifier fa-translate="saverPosition.get()" fa-opacity="saverOpacity.get()">
+<fa-modifier fa-translate="saverPosition.get()" fa-opacity="saverOpacity.get()" ng-if="KioskScreenSaver.isRunning">
   <fa-view>
-    <fa-image-surface fa-image-url="/screensaver/Guess_5.jpg"></fa-image-surface>
-    <fa-modifier fa-size="[400, 100]" fa-align="[0.5, 0.5]" fa-origin="[0.5, 0.5]">
-      <fa-surface fa-background-color="'rgba(0,0,0,0.5)'">
-        <h1>Touch To Begin</h1>
-      </fa-surface>
-      <fa-surface fa-touchstart="KioskScreenSaver.exit()"></fa-surface>
+    <fa-modifier ng-repeat="img in KioskScreenSaver.imgs" fa-opacity="img.opacity.get()" fa-scale="img.scale.get()" fa-align="[.5, .5]" fa-origin="[.5,.5]" fa-translate="img.translate.get()">
+      <fa-image-surface fa-image-url="{{img.url}}" ng-show="img.active" fa-touchstart="KioskScreenSaver.exit()"></fa-image-surface>
     </fa-modifier>
+  </fa-view>
+  <fa-view>
+  <fa-modifier fa-size="[400, 100]" fa-align="[0.5, 0.5]" fa-origin="[0.5, 0.5]" fa-translate="[0,0,100]">
+    <fa-surface>
+      <h1>Touch To Begin</h1>
+    </fa-surface>
+  </fa-modifier>
   </fa-view>
 </fa-modifier>
