--- a/app/modules/kiosk-screensaver/screensaver.html
+++ b/app/modules/kiosk-screensaver/screensaver.html
@@ -5,10 +5,10 @@
     </fa-modifier>
   </fa-view>
   <fa-view>
-  <fa-modifier fa-size="[400, 100]" fa-align="[0.5, 0.5]" fa-origin="[0.5, 0.5]" fa-translate="[0,0,100]">
-    <fa-surface>
-      <h1>Touch To Begin</h1>
-    </fa-surface>
-  </fa-modifier>
+    <fa-modifier fa-size="[500, 500]" fa-align="[0.5, 0.5]" fa-scale="[.5,.5]" fa-origin="[0.5, 0.5]" fa-translate="[0,0,100]" fa-opacity="0.95">
+      <fa-surface class="screensaver-touch" fa-touchstart="KioskScreenSaver.exit()">
+        <h1 class="light-title">Touch To Begin</h1>
+      </fa-surface>
+    </fa-modifier>
   </fa-view>
 </fa-modifier>
